index.html second commit

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<div class="navbar" >
 				<div class="nav" id="popup-menu">	
 					<a href="#!" class="nav-brand">
-					<h1>Fun Taiwan Camp</h1>
+						<img src='https://i.postimg.cc/HVt27qr6/logo.jpg' border='0' alt='logo' />
 					</a>
 					<a href="#!" class="navitem" id="">About Us</a>
 					<div class="navicon">
